# news-public-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  go.mod  news-public.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  news-public.rockspec  news-public_sdk.lua  news-public_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  composer.json  config.php  features.php  (+1 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  newspublic_sdk.py  newspublic_types.py  pyproject.toml
py/core/: context.py  control.py  error.py  result.py
py/entity/: noticia_entity.py
py/feature/: audit_feature.py  cache_feature.py  debug_feature.py  metrics_feature.py  ratelimit_feature.py  rbac_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: feature_harness.py  runner.py  test_exists.py  test_netsim.py  test_noticia_direct.py  test_noticia_entity.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: clean.py  done.py  feature_init.py  fetcher.py  make_context.py  make_error.py  make_options.py  make_point.py  make_request.py  make_response.py  make_result.py  make_spec.py  make_url.py  param.py  prepare_path.py  result_basic.py  result_headers.py  transform_request.py
(+414 files in other folders)
